--- a/views/led.ejs
+++ b/views/led.ejs
@@ -7,10 +7,10 @@
 </div>
 <div class="d-flex justify-content-center">
 
-    <a href="/components/led/on" class="btn btn-success">On</a>
-    <a href="/components/led/blink" class="btn btn-warning">Blink</a>
-    <a href="/components/led/stop" class="btn btn-primary">Stop Blink</a>
-    <a href="/components/led/off" class="btn btn-danger">Off</a>
+    <a href="/LEDComp/led/on" class="btn btn-success">On</a>
+    <a href="/LEDComp/led/blink" class="btn btn-warning">Blink</a>
+    <a href="/LEDComp/led/stop" class="btn btn-primary">Stop Blink</a>
+    <a href="/LEDComp/led/off" class="btn btn-danger">Off</a>
 
 
 
