--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -8,7 +8,7 @@
 <div class="d-flex justify-content-center">
 
 
-    <a href="/components/led" class="btn btn-danger">component</a>
+    <a href="/LEDComp/led" class="btn btn-danger">Led</a>
 
 
 
